		Windows-specific changes to R
		=============================

See the file NEWS for changes that affect all versions of R.


rw1050
======

BLAS support is now in a separate DLL, Rblas.dll.  This means that any
packages using BLAS (KernSmooth, bqtl, fracdiff, gss, quadprog and
quantreg amongst those on CRAN) need to be re-built.  The advantage is
that less space is taken up overall, and ATLAS can be used just by
rebuilding Rblas.dll.

The installers now use bzip compression, so make smaller packages
(which take a little longer to install).

Cross-building automatically uses STAMP=NO for packages.

R and packages can now be built in a directory whose path contains
spaces (although we still don't recommend it).

Rcmd INSTALL and make pkg-foo test for attempted installation into the
source directory.

All the configuration options are now in file MkRules.

Unzipping is now handled by internal code based on zlib: unzip.dll is
no longer required.


rw1042
======

Launching HTML files from the menus was not working with Netscape 6.2.1,
so a workaround has been provided.

Rgui.exe.manifest has been added to get XP-style widgets on Windows XP.

Some logical colour names have been changed to get consistent colour
schemes on Windows XP.

The books in the contents of CHTML for packages were not being sorted
correctly.



rw1041
======

Updating HTML indices, e.g. in help.start(), is done within a 
try() construct.

help.start() has a new argument `update'.

Making packages now warns if there is a configure script.

ga.h was needed for building package `windlgs', but was omitted from the
`source package' code for rw1040.  It is now included.

Rcmd check was failing on Windows 9X, because additions in 1.4.0 were
not using Rsystem().



rw1040
======

If --max-mem-size is given a value greater than 256M, the requested
maximum memory is reserved (but not allocated) initially.  This will
enable the memory to be managed more efficiently, but does increase