@@ -7,6 +7,8 @@ See the file NEWS for changes that affect all versions of R.
 rw1050
 ======
 
+Transparency in png() is now supported on `High Color' (16-bit) screens.
+
 BLAS support is now in a separate DLL, Rblas.dll.  This means that any
 packages using BLAS (KernSmooth, bqtl, fracdiff, gss, quadprog and
 quantreg amongst those on CRAN) need to be re-built.  The advantage is
